<resources>
    <string name="app_name">FinalProject</string>
    <string name="loading_error_message">We couldn\'t connect to Flickr. Check your internet connection and try again.</string>
    <string name="action_settings">Settings</string>

    <string name="pref_sort_key">pref_sort</string>
    <string name="pref_sort_title">Sort by</string>
    <string name="pref_sort_default">distance</string>

    <string name="pref_search_key">pref_search</string>
    <string name="pref_search_title">Search by</string>
    <string name="pref_search_default">landscape</string>
</resources>
