<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:key="@string/pref_sort_key"
        android:title="@string/pref_sort_title"
        android:summary="%s"
        android:dialogTitle="@string/pref_sort_title"
        android:entries="@array/pref_sort_entries"
        android:entryValues="@array/pref_sort_values"
        android:defaultValue="@string/pref_sort_default" />
    <ListPreference
        android:key="@string/pref_search_key"
        android:title="@string/pref_search_title"
        android:summary="%s"
        android:dialogTitle="@string/pref_search_title"
        android:entries="@array/pref_search_entries"
        android:entryValues="@array/pref_search_values"
        android:defaultValue="@string/pref_search_default" />
</PreferenceScreen>